--- a/share/Brewfile
+++ b/share/Brewfile
@@ -7,6 +7,7 @@ tap "homebrew/core", "https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew
 tap "homebrew/services"
 tap "jason0x43/neovim-nightly"
 tap "jesseduffield/lazygit"
+tap "laishulu/macism"
 tap "mongodb/brew"
 tap "sass/sass"
 tap "talal/tap"
@@ -16,15 +17,16 @@ brew "aom"
 brew "apr"
 brew "openssl@1.1"
 brew "gdbm"
-brew "gettext"
 brew "readline"
 brew "sqlite"
 brew "xz"
 brew "python@3.9"
 brew "asciinema"
 brew "aspell"
+brew "autoconf"
 brew "automake"
 brew "autopep8"
+brew "gettext"
 brew "axel"
 brew "bat"
 brew "bdw-gc"
@@ -37,8 +39,11 @@ brew "freetype"
 brew "libffi"
 brew "pcre"
 brew "glib"
+brew "pkg-config"
 brew "pixman"
 brew "cairo"
+brew "llvm"
+brew "ccls"
 brew "clang-format"
 brew "cloc"
 brew "cmake"
@@ -56,6 +61,7 @@ brew "dos2unix"
 brew "expat"
 brew "fd"
 brew "findutils"
+brew "libtool"
 brew "unixodbc"
 brew "freetds"
 brew "fribidi"
@@ -69,6 +75,7 @@ brew "gd"
 brew "gdk-pixbuf"
 brew "gh"
 brew "ghostscript"
+brew "gist"
 brew "pcre2"
 brew "git"
 brew "git-extras"
@@ -81,7 +88,6 @@ brew "global"
 brew "gnu-sed"
 brew "gnu-tar"
 brew "gnu-time"
-brew "pkg-config"
 brew "guile"
 brew "libevent"
 brew "libtasn1"
@@ -120,6 +126,7 @@ brew "little-cms2"
 brew "openexr"
 brew "imagemagick"
 brew "jansson"
+brew "jq"
 brew "krb5"
 brew "libgccjit"
 brew "libiconv"
@@ -144,6 +151,7 @@ brew "mailutils"
 brew "make"
 brew "mas"
 brew "msgpack"
+brew "multimarkdown"
 brew "protobuf"
 brew "mysql"
 brew "nmap"
@@ -168,18 +176,17 @@ brew "subversion"
 brew "swig"
 brew "tldr"
 brew "tree"
-brew "unrar"
 brew "watchman"
 brew "wget"
 brew "zlib"
 brew "zsh"
 brew "d12frosted/emacs-plus/emacs-plus@28", args: ["with-modern-purple-flat-icon", "with-xwidgets"]
 brew "jesseduffield/lazygit/lazygit"
+brew "laishulu/macism/macism"
 brew "mongodb/brew/mongodb-database-tools"
 brew "mongodb/brew/mongodb-community"
 brew "talal/tap/bonclay"
 brew "universal-ctags/universal-ctags/universal-ctags", args: ["HEAD"]
-cask "airdroid"
 cask "baidunetdisk"
 cask "charles"
 cask "cheatsheet"
@@ -187,13 +194,16 @@ cask "electron"
 cask "firefox"
 cask "fliqlo"
 cask "font-sarasa-gothic"
+cask "font-source-han-noto-cjk"
 cask "gitter"
 cask "google-chrome"
 cask "hiddenbar"
 cask "iina"
 cask "kap"
 cask "karabiner-elements"
+cask "keka"
 cask "keycastr"
+cask "kindle"
 cask "kitty"
 cask "microsoft-auto-update"
 cask "microsoft-edge"
