fix : kitty.conf

--- a/share/kitty.conf
+++ b/share/kitty.conf
@@ -50,7 +50,7 @@ map  cmd+v   paste_from_clipboard
 # Tab
 map  cmd+t  new_tab_with_cwd !neighbor
 map  cmd+w  close_tab
-map  cmd+'  next_tab
+map  cmd+.  next_tab
 map  cmd+1  goto_tab 1
 map  cmd+2  goto_tab 2
 map  cmd+3  goto_tab 3
@@ -125,45 +125,3 @@ inactive_tab_background #242730
 
 active_border_color #bbc2cf
 inactive_border_color #62686e
-
-### theme: atom-one
-## black
-# color0 #282c34
-# color8 #393e48
-## red
-# color1 #e06c75
-# color9 #d19a66
-# green
-# color2 #98c379
-# color10 #56b6c2
-# yellow
-# color3 #e5c07b
-# color11 #e5c07b
-# blue
-# color4 #61afef
-# color12 #61afef
-# magenta
-# color5 #be5046
-# color13 #be5046
-# cyan
-# color6 #56b6c2
-# color14 #56b6c2
-# white
-# color7 #979eab
-# color15 #abb2bf
-#
-# foreground #979eab
-# background #282c34
-# cursor #cccccc
-# cursor_text_color #282c34
-#
-# selection_foreground #282c34
-# selection_background #979eab
-#
-# active_tab_foreground   #282c34
-# active_tab_background   #979eab
-# inactive_tab_foreground #abb2bf
-# inactive_tab_background #282c34
-#
-# active_border_color #61afef
-# inactive_border_color #979eab
