--- a/share/Brewfile
+++ b/share/Brewfile
@@ -1,15 +1,12 @@
-tap "d12frosted/emacs-plus"
+tap "daviderestivo/emacs-head"
 tap "homebrew/bundle"
 tap "homebrew/cask", "https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-cask.git"
 tap "homebrew/cask-fonts", "https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-cask-fonts.git"
 tap "homebrew/cask-versions"
 tap "homebrew/core", "https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-core.git"
 tap "homebrew/services"
-tap "jason0x43/neovim-nightly"
-tap "jesseduffield/lazygit"
 tap "laishulu/macism"
 tap "mongodb/brew"
-tap "sass/sass"
 tap "talal/tap"
 tap "universal-ctags/universal-ctags"
 brew "adns"
@@ -42,9 +39,7 @@ brew "glib"
 brew "pkg-config"
 brew "pixman"
 brew "cairo"
-brew "llvm"
 brew "ccls"
-brew "clang-format"
 brew "cloc"
 brew "cmake"
 brew "coreutils"
@@ -61,12 +56,14 @@ brew "dos2unix"
 brew "expat"
 brew "fd"
 brew "findutils"
+brew "fnm"
 brew "libtool"
 brew "unixodbc"
 brew "freetds"
 brew "fribidi"
 brew "fzf"
 brew "gmp"
+brew "gawk"
 brew "isl"
 brew "gcc"
 brew "libtiff"
@@ -106,12 +103,14 @@ brew "go"
 brew "gobject-introspection"
 brew "gotop"
 brew "graphite2"
-brew "grep"
-brew "grip"
 brew "jasper"
 brew "netpbm"
 brew "gts"
 brew "harfbuzz"
+brew "pango"
+brew "librsvg"
+brew "grep"
+brew "grip"
 brew "ncurses"
 brew "htop"
 brew "hub"
@@ -126,14 +125,14 @@ brew "little-cms2"
 brew "openexr"
 brew "imagemagick"
 brew "jansson"
+brew "oniguruma"
 brew "jq"
 brew "krb5"
+brew "lazygit"
 brew "libgccjit"
 brew "libiconv"
 brew "libidn"
 brew "libpq"
-brew "pango"
-brew "librsvg"
 brew "libspiro"
 brew "libuninameslist"
 brew "libuv"
@@ -154,11 +153,14 @@ brew "msgpack"
 brew "multimarkdown"
 brew "protobuf"
 brew "mysql"
+brew "neovim"
 brew "nmap"
+brew "opencc"
 brew "openjdk"
 brew "p7zip"
 brew "pandoc"
 brew "perl"
+brew "plantuml"
 brew "prettyping"
 brew "proxychains-ng"
 brew "pstree"
@@ -180,8 +182,7 @@ brew "watchman"
 brew "wget"
 brew "zlib"
 brew "zsh"
-brew "d12frosted/emacs-plus/emacs-plus@28", args: ["with-modern-purple-flat-icon", "with-xwidgets"]
-brew "jesseduffield/lazygit/lazygit"
+brew "daviderestivo/emacs-head/emacs-head@28", args: ["with-cocoa", "with-imagemagick", "with-mailutils", "with-modern-icon-purple-flat", "with-native-comp", "with-native-full-aot", "with-pdumper", "with-xwidgets"]
 brew "laishulu/macism/macism"
 brew "mongodb/brew/mongodb-database-tools"
 brew "mongodb/brew/mongodb-community"
@@ -203,13 +204,11 @@ cask "kap"
 cask "karabiner-elements"
 cask "keka"
 cask "keycastr"
-cask "kindle"
 cask "kitty"
 cask "microsoft-auto-update"
 cask "microsoft-edge"
 cask "mos"
 cask "motrix"
-cask "neovim-nightly"
 cask "neteasemusic"
 cask "picgo"
 cask "postman"
