--- a/share/Brewfile
+++ b/share/Brewfile
@@ -1,10 +1,14 @@
 tap "daviderestivo/emacs-head"
+tap "homebrew/aliases"
+tap "homebrew/autoupdate"
 tap "homebrew/bundle"
 tap "homebrew/cask", "https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-cask.git"
 tap "homebrew/cask-fonts", "https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-cask-fonts.git"
 tap "homebrew/cask-versions"
+tap "homebrew/command-not-found"
 tap "homebrew/core", "https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-core.git"
 tap "homebrew/services"
+tap "homebrew/test-bot"
 tap "laishulu/macism"
 tap "mongodb/brew"
 tap "talal/tap"
@@ -36,8 +40,10 @@ brew "libffi"
 brew "pcre"
 brew "glib"
 brew "pkg-config"
+brew "libx11"
 brew "pixman"
 brew "cairo"
+brew "llvm"
 brew "ccls"
 brew "cloc"
 brew "cmake"
@@ -50,12 +56,13 @@ brew "openldap"
 brew "zstd"
 brew "curl"
 brew "deno"
-brew "diff-so-fancy"
 brew "dos2unix"
 brew "expat"
 brew "fd"
 brew "findutils"
 brew "fnm"
+brew "libevent"
+brew "folly"
 brew "libtool"
 brew "unixodbc"
 brew "freetds"
@@ -70,6 +77,8 @@ brew "webp"
 brew "gd"
 brew "gdk-pixbuf"
 brew "gh"
+brew "libidn"
+brew "little-cms2"
 brew "ghostscript"
 brew "gist"
 brew "pcre2"
@@ -79,13 +88,11 @@ brew "gnu-getopt"
 brew "git-flow-avh"
 brew "git-lfs"
 brew "glances"
-brew "python@3.8"
 brew "global"
 brew "gnu-sed"
 brew "gnu-tar"
 brew "gnu-time"
 brew "guile"
-brew "libevent"
 brew "libtasn1"
 brew "nettle"
 brew "p11-kit"
@@ -108,19 +115,19 @@ brew "gts"
 brew "harfbuzz"
 brew "pango"
 brew "librsvg"
+brew "graphviz"
 brew "grep"
 brew "grip"
 brew "ncurses"
 brew "htop"
 brew "hub"
 brew "hugo"
-brew "ilmbase"
+brew "imath"
 brew "libde265"
 brew "shared-mime-info"
 brew "x265"
 brew "libheif"
 brew "libomp"
-brew "little-cms2"
 brew "openexr"
 brew "imagemagick"
 brew "jansson"
@@ -130,7 +137,6 @@ brew "krb5"
 brew "lazygit"
 brew "libgccjit"
 brew "libiconv"
-brew "libidn"
 brew "libpq"
 brew "libspiro"
 brew "libuninameslist"
@@ -143,6 +149,7 @@ brew "loc"
 brew "lrzsz"
 brew "lua"
 brew "luajit"
+brew "luajit-openresty"
 brew "luarocks"
 brew "macos-trash"
 brew "mailutils"
@@ -163,6 +170,7 @@ brew "plantuml"
 brew "prettyping"
 brew "proxychains-ng"
 brew "pstree"
+brew "python@3.8"
 brew "ranger"
 brew "redis"
 brew "ripgrep"
@@ -189,6 +197,7 @@ brew "universal-ctags/universal-ctags/universal-ctags", args: ["HEAD"]
 cask "baidunetdisk"
 cask "charles"
 cask "cheatsheet"
+cask "discord"
 cask "electron"
 cask "firefox"
 cask "fliqlo"
