fix : adjustls keyindings for kitty

--- a/common/kitty.conf
+++ b/common/kitty.conf
@@ -64,8 +64,8 @@ map  cmd+9  goto_tab 9
 map  cmd+n  launch --cwd=current
 map  cmd+d  close_window
 map  cmd+;  next_window
-map  kitty_mod+f  move_window_forward
-map  kitty_mod+b  move_window_backward
+map  cmd+j  move_window_forward
+map  cmd+k  move_window_backward
 # Layout
 map  cmd+enter  next_layout
 # Scroll
