--- a/common/kitty.conf
+++ b/common/kitty.conf
@@ -112,8 +112,8 @@ color15 #abb2bf
 
 foreground #bbc2cf
 background #242730
-cursor #cccccc
-cursor_text_color #242730
+cursor #fcce7b
+cursor_text_color background
 
 selection_foreground #242730
 selection_background #bbc2cf
