--- a/common/starship.toml
+++ b/common/starship.toml
@@ -1,5 +1,6 @@
 add_newline = true
-scan_timeout = 10
+# scan_timeout = 10
+# command_timeout = 4000
 
 [username]
 disabled = false
@@ -23,13 +24,11 @@ format = "[$duration]($style) "
 truncation_length = 2
 fish_style_pwd_dir_length = 0
 
-[git_commit]
-disabled = false
-commit_hash_length = 7
-format = "[\\($hash\\)]($style) "
-
 [git_status]
 disabled = true
+
+# [git_metrics]
+# disabled = false
 
 [python]
 pyenv_version_name = true
